--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,4 +33,7 @@ jobs:
         tar xf swift.tar.gz
         mv swift-${{ matrix.swift-version }}-RELEASE-ubuntu${{ matrix.ubuntu-version }}.04/usr ./usr
         rm -r swift.tar.gz swift-${{ matrix.swift-version }}-RELEASE-ubuntu${{ matrix.ubuntu-version }}.04
-        ./usr/bin/swift -v
+    - name: Test
+      run: |
+        export PATH="$(pwd)/swift-runtime/usr/bin:$PATH"
+        swift test
