--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,6 +47,6 @@ jobs:
           - 11.2
     steps:
     - uses: actions/checkout@v1
-    - run: xcode-select -s /Applications/Xcode_${{ matrix.xcode-version }}.app
+    - run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode-version }}.app
     - name: Test
       run: swift test
